[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
srt-sys = { git = "https://github.com/wavey-ai/av-rs.git", features = [
  "async",
] }
rml_rtmp = { git = "https://github.com/wavey-ai/rust-media-libs.git" }
serde = { verison = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["sync"] }
